Restarting Mithril Application,
Added page design
Loading from server
Loading wikis

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <a href="mithril" class="mvc-box">Mithril.js </a>
         </div>
         <div class="col-sm-4 col-xs-12 mvc-div">
-            <a class="mvc-box">Can.Js</a>
+            <a href="canjs" class="mvc-box">Can.Js</a>
         </div>
         <div class="col-sm-4 col-xs-12 mvc-div">
             <a class="mvc-box">Component.js</a>
