--- a/index.html
+++ b/index.html
@@ -5,18 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-<style>
-    .mvc-box {
-        border: 1px solid #ccc;
-        padding: 20px;
-        text-align: center;
-        font-size: 20px;
-    }
-    .mvc-div {
-        height: 100px;
-        margin: 10px 0;
-    }
-</style>
+    <link href="css/style.css" rel="stylesheet">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -24,36 +14,27 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
 </head>
-<body data-bind="event: { mouseup: tabDragUp, mousemove: bandDrag}">
-<div class="container">
-<div class="row">
-    <div class="col-xs-12">
-        <h2> Javascript Framework Comparison</h2>
-        <p> Select your framework</p>
+<body>
+<div class="jumbotron">
+    <div class="container">
+        <h2>Javascript Framework Comparison</h2>
+        <p>Select your framework </p>
+        <p><a href="https://github.com/caneruguz/cm-mvc" class="btn btn-info">Github Page for this project</a></p>
     </div>
 </div>
 
-
-    <div class="row">
-        <div class="col-sm-4 col-xs-12 mvc-div">
-            <a href="mithril" class="mvc-box">Mithril.js </a>
+<div class="container">
+    <div class="row mvc-row">
+        <div class="col-sm-4  col-xs-12  mvc-div">
+            <div class="mvc-box bg-success"> <a href="mithril"> Mithril.js </a></div>
         </div>
         <div class="col-sm-4 col-xs-12 mvc-div">
-            <a href="canjs" class="mvc-box">Can.Js</a>
+            <div class="mvc-box "> <a href="#">Can.js </a></div>
         </div>
         <div class="col-sm-4 col-xs-12 mvc-div">
-            <a class="mvc-box">Component.js</a>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-4 col-xs-12 mvc-div">
-            <a class="mvc-box">Angular.js</a>
-        </div>
-        <div class="col-sm-4 col-xs-12 mvc-div">
-            <a class="mvc-box">jQuery</a>
+            <div class="mvc-box "> <a href="#"> Knockout.js </a></div>
         </div>
     </div>
-
 </div> <!-- Close Container  -->
 
 
